# katas

./: game.py  pyproject.toml
close/: close.py  ex.json
gilded_rose/: .gitignore  README.md  gilded_rose.py  item.py  test_gilded_rose.py  texttest_fixture.py
gilded_rose/behavior/: base_behavior.py  improving_with_age_behavior.py  increasing_until_event_behavior.py  legendary_behavior.py  quality_behavior_delegator.py  standard_degrading_behavior.py
gilded_rose/models/: enums.py  item.py
gilded_rose/sell_in_behavior/: base_sell_in_behavior.py  no_change_sell_in_behavior.py  sell_in_behavior_delegator.py  standard_decrease_sell_in_behavior.py
gilded_rose/tests/: test_boundary_conditions.py  test_custom_behavior_assignments.py  test_improving_with_age_behavior.py  test_increasing_until_event_behavior.py  test_legendary_behavior.py  test_standard_items.py
trivia/: .gitignore  golden_master.txt  original.py  trivia.py
trivia/tests/: test_ask_question.py  test_game.py  test_game_player_limit.py  test_golden_master.py
