[tool.poetry]
name = "katas"
version = "0.1.0"
description = ""
authors = ["Max Buck <maxbuckdeveloper@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.5"
approvaltests = "^14.3.0"
pytest-approvaltests = "^0.2.4"
coverage = "^7.6.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
